# tree-sitter-alex

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-lexer.x  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-alex.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alex/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAlex/: alex.h
bindings/swift/TreeSitterAlexTests/: TreeSitterAlexTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
